--- a/src/main/resources/templates/se/customer/home.html
+++ b/src/main/resources/templates/se/customer/home.html
@@ -27,29 +27,45 @@
         <div class="container">
 
             <!-- 비로그인 -->
-            공구가 많이 열린 물품 (최대 8개)
-            <hr>
-            <th:block th:each=" manyMap : ${manyList} ">
-                <th:block th:text="${manyMap.PRICE}"></th:block>
-                <img th:src="@{/customer/seimage(itemno=${manyMap.ITEMNO})}" style="width: 100px;">
-            </th:block>
-            <hr>
+            <th:block th:if="${user} == null">
 
-            기한이 얼마 안 남은 공구 (최대 5개) // 로그인시 8개
-            <hr>
-            <th:block th:each=" deadMap : ${deadList} ">
-                <th:block th:text="${deadMap.PRICE}"></th:block>
-                <th:block th:text="|D-${deadMap.DDAY}|"></th:block>
-                <img th:src="@{/customer/seimage(itemno=${deadMap.ITEMNO})}" style="width: 100px;">
+                기한이 얼마 안 남은 공구 (5개) 
+                <hr>
+                <th:block th:each=" deadMap : ${deadList} ">
+                    <th:block th:text="${deadMap.PRICE}"></th:block>
+                    <th:block th:text="|D-${deadMap.DDAY}|"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${deadMap.ITEMNO})}" style="width: 100px;">
+                </th:block>
+                <hr>
+                공구가 많이 열린 물품 (8개)
+                <hr>
+                <th:block th:each=" manyMap : ${manyList} ">
+                    <th:block th:text="${manyMap.PRICE}"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${manyMap.ITEMNO})}" style="width: 100px;">
+                </th:block>
+                <hr>
+
             </th:block>
-            <hr>
+
 
             <!-- 로그인 -->
-            내 주위 실시간 공구 (최대 5개)
-            <hr>
-            <th:block th:each=" aroundMap : ${aroundList} ">
-                <th:block th:text="${aroundMap.PRICE}"></th:block>
-                <img th:src="@{/customer/seimage(itemno=${aroundMap.ITEMNO})}" style="width: 100px;">
+            <th:block th:if="${user} != null">
+
+                내 주위 실시간 공구 (5개)
+                <hr>
+                <th:block th:each=" aroundMap : ${aroundList} ">
+                    <th:block th:text="${aroundMap.PRICE}"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${aroundMap.ITEMNO})}" style="width: 100px;">
+                </th:block>
+                기한이 얼마 안 남은 공구 (8개)
+                <hr>
+                <th:block th:each=" deadMap : ${deadList} ">
+                    <th:block th:text="${deadMap.PRICE}"></th:block>
+                    <th:block th:text="|D-${deadMap.DDAY}|"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${deadMap.ITEMNO})}" style="width: 100px;">
+                </th:block>
+                <hr>
+                
             </th:block>
 
 
