--- a/src/main/resources/templates/se/customer/join.html
+++ b/src/main/resources/templates/se/customer/join.html
@@ -77,7 +77,7 @@
             // console.log(data.chk);
 
             if(data.chk === 1){
-                document.getElementById("idcheck").innerText = "사용할 수 없는 아이디입니다";
+                document.getElementById("idcheck").innerText = "이미 사용 중인 아이디입니다";
                 document.getElementById("idcheck").style.color = 'red';
             }
             else if(data.chk === 0){
@@ -113,6 +113,7 @@
 
         // 유효성 검사 -----------------------------------------------------------------------------------
         const joinAction = () => {
+            
             const id = document.querySelector("input[name='id']");
             const pw = document.querySelector("input[name='pw']");
             const pw2 = document.querySelector("input[name='pw2']");
@@ -124,8 +125,11 @@
             const latitude = document.querySelector("input[name='latitude']");
             const longitude = document.querySelector("input[name='longitude']");
             // console.log(gender); // 비어있으면 null // .value => 오류
-            if( id.value.length  <= 0 ){
-                alert("아이디를 입력하세요");
+
+            var idRegExp = /^[a-zA-z0-9]{4,12}$/;
+            if(!idRegExp.test(id)){
+                alert("아이디는 영문 대소문자와 숫자만 포함할 수 있습니다 (최대 12자리)");
+                id.value = "";
                 id.focus();
                 return false;
             }
