--- a/src/main/resources/templates/jk/seller/mypage/pwinfocheck.html
+++ b/src/main/resources/templates/jk/seller/mypage/pwinfocheck.html
@@ -37,17 +37,16 @@
                 <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
                     <div class="container mt-5">
                         <h1 class="mb-4"><strong>본인확인</strong></h1>
-                        <hr />
-                        <form id="form" th:action="@{/seller/pwinfocheck.do}" th:object="${seller}" method="post">
-                            <input type="text" id="id" name="no" th:field="${seller.no}" hidden /><br />
+
+                        <th:block th:object="${seller}">
+                            <input type="text" id="id" th:field="${seller.no}" hidden />
                             <div class="mb-3 form-group">
                                 <label for="pw" id="companyPwChk" class="form-label">비밀번호</label>
                                 <input type="password" class="form-control" id="pw" name="pw" required>
                             </div>
                             <br>
-                            <hr>
-                            <button type="button" class="btn btn-outline-dark" onclick="checkPw()">인증하기</button>
-                        </form>
+                            <button type="button" class="btn btn-outline-dark" onclick="ajaxPwCheck()">인증하기</button>
+                        </th:block>
                     </div>
                 </div>
             </main>
@@ -55,6 +54,8 @@
             <th:block th:replace="~{/jk/seller/footer :: footerHTML}"></th:block>
         </div>
     </div>
+
+    
 
     <!-- 6. Bootstrap용 js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
@@ -67,7 +68,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
         integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
+    <!-- axios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
+    <script th:inline="javascript">
         $(document).ready(function () {
             const sidebarToggle = $('#sidebarToggle');
             if (sidebarToggle) {
@@ -80,16 +83,40 @@
             }
         });
 
-        function checkPw() {
-            var oldPw = document.getElementById("pw");
 
+        // 현재 비밀번호 유효성 검사
+        async function ajaxPwCheck() {
+
+            var oldPw = document.getElementById("pw");
             if (oldPw.value == "") { // 현재비번칸이 비었을 시
                 alert("비밀번호를 입력해주세요."); //alert창
                 oldPw.focus(); // 빈 입력창으로 커서 이동
                 return false; // 아래 코드부터 아무것도 전달 안함.
             }
-            form.submit();
+
+            // @PostMapping 방식
+            const id = document.getElementById("id");
+            const url = /*[[@{/api/sellerpwcheck.json}]]*/"";
+            // console.log(url);
+            const headers = { "Content-Type": "application/json" };
+            const body = {no:id.value, pw:oldPw.value};
+            const { data } = await axios.post(url, body, { headers });
+            // console.log('반환되는 결과', data);
+
+            if (data.chk === 1) {
+                const url =/*[[@{/seller/}]]*/"";
+                const param = /*[[${param.redirect}]]*/"";
+                // console.log(param, url); // 정상작동 확인.
+
+                window.location.href = url + param;
+            } else if (data.chk === 0) {
+                alert("비밀번호가 올바르지 않습니다.")
+            } else {
+                alert("일시적인 오류가 발생했습니다.")
+            }
         }
+
+
     </script>
 </body>
 
