--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -14,8 +14,10 @@
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/seller/pwinfocheck.do}">내정보 수정하기</a>
-                            <a class="nav-link" th:href="@{/seller/updatepw.do}">비밀번호 변경하기</a>
+                            <a class="nav-link" onclick="pwCheck1()">
+                                내정보 수정하기</a>
+                            <a class="nav-link" onclick="pwCheck2()">
+                                비밀번호 변경하기</a>
                         </nav>
                     </div>
 
@@ -53,8 +55,34 @@
             </div>
             <div class="sb-sidenav-footer">
                 <p th:text="'환영합니다,'" style="font-size: small;"></p>
-                <p th:text=" ${companyName} + '님!'"  style="font-size: small; margin-bottom: 0; color: aliceblue;"></p>
+                <p th:text=" ${companyName} + '님!'" style="font-size: small; margin-bottom: 0; color: aliceblue;"></p>
             </div>
         </nav>
     </div>
+    <!-- axios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
+    <script th:inline="javascript">
+        // @GetMapping 방식
+        // 기능함수 앞에 async 붙여야 함!
+        async function pwCheck1() {
+            let url = /*[[@{/api/sellerpwcheck.json}]]*/"";
+            url += `?redirect=updateinfo`;
+
+            const headers = { "Content-Type": "application/json" };
+            const { data } = await axios.get(url, { headers: headers });
+            console.log('반환되는 결과', data);
+
+            window.location.href = /*[[@{/seller/pwinfocheck.do?redirect=updateinfo.do}]]*/ + "";
+        }
+        async function pwCheck2() {
+            let url = /*[[@{/api/sellerpwcheck.json}]]*/"";
+            url += `?redirect=updatepw`;
+            const headers = { "Content-Type": "application/json" };
+            const { data } = await axios.get(url, { headers: headers });
+            console.log('반환되는 결과', data);
+
+            window.location.href = /*[[@{/seller/pwinfocheck.do?redirect=updatepw.do}]]*/ + "";
+        }
+
+    </script>
 </th:block>
