--- a/src/main/resources/templates/gr/customer/myaccountdrop.html
+++ b/src/main/resources/templates/gr/customer/myaccountdrop.html
@@ -513,7 +513,11 @@
 
 
     <!-- script-->
+
+    <script src = "https://developers.kakao.com/sdk/js/kakao.min.js"></script> <!-- 로그아웃용 -->
     <script th:inline="javascript" type="text/javascript">
+        Kakao.init('f37acd51f39500af41a1f590e928481e'); // 로그아웃용
+
 
         async function dropAction(username){
 
@@ -528,9 +532,47 @@
             console.log(data.result);
 
             if(data.result == 1){
-                logoutAction();
+                logoutAction1(username);
             }
 
+        }
+
+        // 로그아웃
+        function logoutAction1(e) {
+            const logoutform = document.createElement("form");
+            logoutform.action = /*[[@{/logout.do}]]*/"";
+            logoutform.method = "post";
+            logoutform.style.display="none";
+
+            const input = document.createElement("input");
+            input.type = "hidden";
+            input.name = "_csrf";
+            input.value =  /*[[${_csrf.token}]]*/"";
+            logoutform.appendChild(input);
+            
+            if(e.indexOf("@k") != -1) { // 카카오톡 로그인일 때
+
+                // alert('카카오로그인'); // 확인용
+
+                if (Kakao.Auth.getAccessToken()) {
+            
+                    Kakao.API.request({
+                        url: '/v1/user/unlink',
+                        success: function (response) {
+                            console.log(response)
+                        },
+                        fail: function (error) {
+                            console.log(error)
+                        },
+                    });
+                
+                    Kakao.Auth.setAccessToken(null);
+                }
+
+            }
+
+            document.body.appendChild(logoutform);
+            logoutform.submit();
         }
 
     </script>
