--- a/src/main/resources/templates/gr/customer/myaddresschk.html
+++ b/src/main/resources/templates/gr/customer/myaddresschk.html
@@ -327,20 +327,21 @@
             </div>
         </div>
 
-        <div class="myinfochk">
-            <div class="title">
-                <h3>비밀번호 확인</h3>
-            </div>
-        
-            <div class="passwordchk-box">
-                <p class="chk_guide d-flex justify-content-center">회원님의 안전한 개인정보 보호를 위해 비밀번호를 다시 한번 확인합니다.</p>
-                <div class="chkbox d-flex justify-content-center">
-                    <input type="password" placeholder="비밀번호를 입력해주세요." style="width: 420px;" id="pw" name="pw">
-                    <button class="btn" title="확인">확인</button>
+        <form th:action="@{/customer/myaddresschk.do}" method="post">
+            <div class="myinfochk">
+                <div class="title">
+                    <h3>비밀번호 확인</h3>
+                </div>
+            
+                <div class="passwordchk-box">
+                    <p class="chk_guide d-flex justify-content-center">회원님의 안전한 개인정보 보호를 위해 비밀번호를 다시 한번 확인합니다.</p>
+                    <div class="chkbox d-flex justify-content-center">
+                        <input type="password" placeholder="비밀번호를 입력해주세요." style="width: 420px;" id="pw" name="pw">
+                        <button class="btn" title="확인">확인</button>
+                    </div>
                 </div>
             </div>
-        </div>
-
+        </form>
 
 
         
