--- a/src/main/resources/templates/gr/customer/mypage.html
+++ b/src/main/resources/templates/gr/customer/mypage.html
@@ -177,7 +177,7 @@
         .mypagemain .grade{
             width: 1240px;
             padding: 36px 0;
-            margin-bottom: 60px;
+            margin-bottom: 90px;
             background-color: #f8f8f8;
         }
 
@@ -189,11 +189,15 @@
             position: relative;
         }
 
+        .mypagemain .grade .info .info-content{
+            padding-top: 15px;
+            vertical-align: center;
+        }
+
         .mypagemain .grade .info h3{
             font-size: 23px;
             letter-spacing: .18px;
-            margin-top: 20px;
-            margin-bottom: 20px;
+            display: inline;
         }
 
         .mypagemain .grade .info a{
@@ -205,7 +209,7 @@
 
         .mypagemain .grade .info .member-icon{
             position: absolute;
-            top: 5px;
+            /* top: 5px; */
             left: 80px;
         }
         
@@ -213,23 +217,37 @@
         .mypage_likeitem .table_title{
             width: 1240px;
             border-bottom: 3px solid #000;
-            padding-bottom: 10px;
+            padding-bottom: 20px;
             margin-bottom: 15px;
             position: relative;
-            height: 50px;
+            height: 53px;
+        }
+
+        .mypage_likeitem .table_title h3{
+            display: inline;
+            font-size: 22px;
+            padding-left: 15px;
+        }
+
+        #h3space{
+            padding-left: 0;
         }
         
         .mypage_likeitemitems .likeitem_items{
             width: 1240px;
-            padding-top: 15px;
+            padding-top: 39px;
             /* padding-bottom: 150px; */
             border-bottom: 3px solid #000;
         }
 
+        .mypage_likeitemitems .likeitem_items ul li:first-child{
+            margin-left: 37px;
+        }
+
         .mypage_likeitemitems .likeitem_items ul li{
-            width: 150px;
-            margin-left: 50px;
-            margin-right: 40px;
+            width: 195px;
+            margin-left: 32px;
+            /* margin-right: 40px; */
             float: left;
             margin-bottom: 50px;
             position: relative;
@@ -241,14 +259,15 @@
         }
 
         .mypage_likeitemitems .likeitem_items ul li .img{
+            width: 195px;
             height: 253px;
             position: relative;
             margin-bottom: 20px;
-
         }
 
         .mypage_likeitemitems .likeitem_items ul li .text{
-            padding: 0 4px 0 6px;
+            padding: 0 4px 0 11px;
+            /* padding-top: 10px; */
         }
 
         .mypage_likeitemitems .likeitem_items ul li .text .title{
@@ -260,11 +279,13 @@
             max-height: initial;
             text-decoration: none;
             color: #000;
+            overflow: hidden;
         }
 
         .mypage_likeitemitems .likeitem_items ul li .text .price{
             position: relative;
             line-height: normal;
+            margin-top: 13px;
             margin-bottom: 14px;
             align-items: baseline;
             text-decoration: none;
@@ -353,9 +374,11 @@
             <div class="grade ">
                 <div class="info">
                     <span class="member-icon"><img th:src="@{/images/gr/membericon.png}" width="100px" height="100px"></span>
-                    <h3>00님 안녕하세요.</h3>
-                    <a>전체 공구 참여 횟수 </a><a th:text="${ret}"></a><a>건 입니다. ♡</a>
-
+                    <div class="info-content">
+                        <h3 th:text="${user.nickname}"></h3><h3>님 안녕하세요.</h3><br/>
+                        <p></p>
+                        <a>전체 공구 참여 횟수 </a><a th:text="${ret}"></a><a>건 입니다. ♡</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -363,68 +386,28 @@
         <!-- 관련물품 내용 -->
         <div class="mypage_likeitem d-flex justify-content-center">
             <div class="table_title">
-                <h3>~님이 관심있어할 상품이에요!</h3>
+                <h3 th:text="${user.nickname}"></h3><h3 id="h3space">님이 관심있어할 상품이에요!</h3>
             </div>
         </div>
 
         <div class="mypage_likeitemitems d-flex justify-content-center">
+            
             <div class="likeitem_items" >
                 <ul>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
+                    <th:block th:each="manyMap : ${manyList} ">
+                        <li>
+                            <a href="#">
+                                <div class="img">
+                                    <img th:src="@{/customer/seimage(itemno=${manyMap.ITEMNO})}" style="width: 193px; height: 250px;" >
+                                </div>
+                                <div class="text">
+                                    <div class="title" th:text="${manyMap.NAME}"></div>
+                                    <div class="price" id="price" th:text="${manyMap.PRICE}" ></div>
+                                </div>
+                            </a>
+                        </li>
+                    </th:block>
+
                 </ul>
             </div>
         </div>
@@ -438,6 +421,15 @@
 
 
     <!-- script-->
+    <!-- <script th:inline="javascript" type="text/javascript">
+        
+        const price = document.getElementById('price');
+        const format = Number(price).toLocalString();
+        // result = price.toLocalString();
+        console.log(format);
+        
+        
+    </script> -->
     
 </body>
 </html>
